--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -395,6 +395,19 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-sandbox-eventing-couchdb-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-eventing-couchdb-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-couchdb-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
 - name: ci-knative-sandbox-eventing-github-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-github-continuous
   alert_stale_results_hours: 3
@@ -405,6 +418,19 @@ test_groups:
   num_failures_to_alert: 1
 - name: ci-knative-sandbox-eventing-github-auto-release
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-github-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-gitlab-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-eventing-gitlab-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-gitlab-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-auto-release
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
@@ -781,8 +807,12 @@ test_groups:
 - name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
+- name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
 - name: ci-knative-pkg-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-pkg-continuous-beta-prow-tests
 - name: ci-knative-pkg-go-coverage-beta-prow-tests
@@ -1142,6 +1172,26 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-operator-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: eventing-couchdb
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-eventing-couchdb-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-eventing-couchdb-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-eventing-couchdb-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
 - name: eventing-github
   dashboard_tab:
   - name: continuous
@@ -1158,6 +1208,26 @@ dashboards:
     num_failures_to_alert: 1
   - name: auto-release
     test_group_name: ci-knative-sandbox-eventing-github-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+- name: eventing-gitlab
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-eventing-gitlab-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-eventing-gitlab-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-eventing-gitlab-auto-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
@@ -1885,8 +1955,14 @@ dashboards:
   - name: ci-knative-eventing-contrib-go-coverage
     test_group_name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+  - name: ci-knative-sandbox-eventing-couchdb-continuous
+    test_group_name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-sandbox-eventing-github-continuous
     test_group_name: ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-eventing-gitlab-continuous
+    test_group_name: ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-pkg-continuous
     test_group_name: ci-knative-pkg-continuous-beta-prow-tests
@@ -2049,7 +2125,9 @@ dashboard_groups:
   - "operator"
 - name: knative-sandbox
   dashboard_names:
+  - "eventing-couchdb"
   - "eventing-github"
+  - "eventing-gitlab"
   - "sample-controller"
   - "sample-source"
   - "net-certmanager"
