Add eventing-ceph and eventing-prometheus config
eventing-ceph should run continuous tests (no release artifacts)
eventing-prometheus should run continuous, nightly, and auto-releases

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -680,6 +680,8 @@ periodics:
   - continuous: true
   - nightly: true
   - auto-release: true
+  knative-sandbox/eventing-ceph:
+  - continuous: true
   knative-sandbox/eventing-couchdb:
   - continuous: true
   - nightly: true
@@ -689,6 +691,10 @@ periodics:
   - nightly: true
   - auto-release: true
   knative-sandbox/eventing-gitlab:
+  - continuous: true
+  - nightly: true
+  - auto-release: true
+  knative-sandbox/eventing-prometheus:
   - continuous: true
   - nightly: true
   - auto-release: true
