--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -408,6 +408,9 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-ceph-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-ceph-continuous
+  alert_stale_results_hours: 3
 - name: ci-knative-sandbox-eventing-couchdb-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous
   alert_stale_results_hours: 3
@@ -444,6 +447,19 @@ test_groups:
   num_failures_to_alert: 1
 - name: ci-knative-sandbox-eventing-gitlab-auto-release
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-prometheus-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-prometheus-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-eventing-prometheus-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-prometheus-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-prometheus-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-prometheus-auto-release
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
@@ -822,12 +838,16 @@ test_groups:
   short_text_metric: "coverage"
 - name: ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-ceph-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-ceph-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-prometheus-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-prometheus-continuous-beta-prow-tests
 - name: ci-knative-pkg-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-pkg-continuous-beta-prow-tests
 - name: ci-knative-pkg-go-coverage-beta-prow-tests
@@ -1207,6 +1227,14 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 1
+- name: eventing-ceph
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-eventing-ceph-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
 - name: eventing-couchdb
   dashboard_tab:
   - name: continuous
@@ -1263,6 +1291,26 @@ dashboards:
     num_failures_to_alert: 1
   - name: auto-release
     test_group_name: ci-knative-sandbox-eventing-gitlab-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+- name: eventing-prometheus
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-eventing-prometheus-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-eventing-prometheus-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-eventing-prometheus-auto-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
@@ -1993,6 +2041,9 @@ dashboards:
   - name: ci-knative-sandbox-eventing-awssqs-continuous
     test_group_name: ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-eventing-ceph-continuous
+    test_group_name: ci-knative-sandbox-eventing-ceph-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-sandbox-eventing-couchdb-continuous
     test_group_name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -2001,6 +2052,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-sandbox-eventing-gitlab-continuous
     test_group_name: ci-knative-sandbox-eventing-gitlab-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-eventing-prometheus-continuous
+    test_group_name: ci-knative-sandbox-eventing-prometheus-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-pkg-continuous
     test_group_name: ci-knative-pkg-continuous-beta-prow-tests
@@ -2164,9 +2218,11 @@ dashboard_groups:
 - name: knative-sandbox
   dashboard_names:
   - "eventing-awssqs"
+  - "eventing-ceph"
   - "eventing-couchdb"
   - "eventing-github"
   - "eventing-gitlab"
+  - "eventing-prometheus"
   - "sample-controller"
   - "sample-source"
   - "net-certmanager"
